[package]
name = "muster"
version = "0.1.0"
edition = "2021"
description = "Batteries-included Raft-like clustering for Rust services"
license = "MIT"

[lib]
doctest = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["sink"] }
rand = "0.8"
redb = "2"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
redb = "2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
